k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: ClusterIP
  selector:
    app: springboot-app
  ports:
    - port: 80
      targetPort: 8080
